Upgrade Java requirement to Java16 (#74)
In anticipation of incubating feature use, enable foreign and vector.

Upgrade some plugins to work w/ Java16.

Work around googleformat shortcomings wrt encapsulated core JDK classes.

Add README (bare bones).

Fix the mismatch between convergence criteria and acceptable fitness in some tests.